<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_18dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_prod_list"
            android:icon="@drawable/ic_list_black_18dp"
            android:title="@string/prod_list" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search_black_18dp"
            android:title="@string/search_title" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_shopping_cart_black_18dp"
            android:title="@string/cart" />
    </group>
</menu>
