<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="8dp"
    android:paddingTop="8dp"
    android:paddingRight="8dp"
    android:paddingStart="8dp"
    android:paddingLeft="8dp"
    android:paddingEnd="8dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cart_title"
            android:layout_centerVertical="true"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:id="@+id/checkout"
            android:padding="8dp"
            android:layout_alignParentEnd="true"
            android:text="@string/checkout_button"
            android:background="@drawable/buttonrounded"
            android:drawableEnd="@drawable/ic_payment_black_18dp"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar4"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/no_results"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="gone"
        android:text="@string/no_results"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cartlist"
        android:visibility="gone" />

</LinearLayout>