<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="88dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

        <ImageView
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:id="@+id/prod"
            android:src="@drawable/no_pic"
            android:contentDescription="@string/prod_img"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="8dp"
            android:paddingStart="8dp"
            android:paddingRight="8dp"
            android:paddingEnd="8dp"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/textView6"
                android:text="@string/sample_text"
                android:ellipsize="end"
                android:singleLine="true"
                android:maxWidth="200dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/textView8"
                android:text="@string/sample_text"
                android:ellipsize="end"
                android:singleLine="true"
                android:maxWidth="200dp"/>

        </LinearLayout>

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ImageButton
                android:paddingLeft="12dp"
                android:paddingStart="12dp"
                android:paddingRight="12dp"
                android:paddingEnd="12dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:id="@+id/button2"
                android:background="@drawable/buttongradient"
                android:src="@drawable/ic_close_black_18dp"
                android:contentDescription="@string/remove" />

        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/qty_text"
            android:layout_gravity="center_vertical"/>

        <Space
            android:layout_width="20dp"
            android:layout_height="match_parent" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ImageButton
                android:paddingLeft="12dp"
                android:paddingStart="12dp"
                android:paddingRight="12dp"
                android:paddingEnd="12dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:id="@+id/buttonRemove"
                android:background="@drawable/buttongradient"
                android:src="@drawable/ic_remove_black_18dp"
                android:contentDescription="@string/add_to_cart_button" />

        </FrameLayout>

        <Space
            android:layout_width="5dp"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_gravity="center_vertical"
            android:id="@+id/qty"
            android:text="@string/base_qty"/>

        <Space
            android:layout_width="5dp"
            android:layout_height="wrap_content" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ImageButton
                android:paddingLeft="12dp"
                android:paddingStart="12dp"
                android:paddingRight="12dp"
                android:paddingEnd="12dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:id="@+id/buttonAdd"
                android:background="@drawable/buttongradient"
                android:src="@drawable/ic_add_black_18dp"
                android:contentDescription="@string/add_to_cart_button" />

        </FrameLayout>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_text"
        android:id="@+id/subtotal"
        android:layout_gravity="end"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary" />

</LinearLayout>