<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="marketcloud.com.marketcloudexample.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_general"
            android:id="@+id/textView2" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <ImageView
            android:layout_width="match_parent"
            android:scaleType="fitXY"
            android:layout_height="225dp"
            android:src="@drawable/mainbanner"
            android:id="@+id/mainBanner"
            android:contentDescription="@string/main_banner_title" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/browse_cat"
            android:id="@+id/textView4" />

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/progressBar" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables"
                android:id="@+id/slide_cat_ll"
                android:weightSum="3"
                android:visibility="gone">

            </LinearLayout>
        </HorizontalScrollView>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/browse_prod"
            android:id="@+id/textView5" />

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/progressBar2" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables"
                android:id="@+id/slide_prod_ll"
                android:weightSum="3"
                android:visibility="gone">

            </LinearLayout>
        </HorizontalScrollView>

    </LinearLayout>
</ScrollView>