<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="fill_parent"
    android:paddingBottom="8dp"
    android:paddingTop="8dp"
    android:paddingStart="8dp"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:paddingEnd="8dp">

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar3"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/prod_ll"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/prodImage"
                android:src="@drawable/no_pic"
                android:contentDescription="@string/prod_name"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="8dp"
                android:paddingStart="8dp"
                android:paddingRight="8dp"
                android:paddingEnd="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:id="@+id/textView6"
                    android:text="@string/sample_text"/>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/textView7"
                    android:text="@string/sample_text"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/textView8"
                    android:text="@string/sample_text" />

            </LinearLayout>

        </LinearLayout>

        <Space
            android:layout_height="20dp"
            android:layout_width="match_parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/description"
            android:text="@string/sample_text" />

        <Space
            android:layout_height="20dp"
            android:layout_width="match_parent" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">


            <Button
                android:paddingLeft="12dp"
                android:paddingStart="12dp"
                android:paddingRight="12dp"
                android:paddingEnd="12dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:id="@+id/close"
                android:background="@drawable/buttonnogradient"
                android:text="@string/close_dialog"
                android:drawableEnd="@drawable/ic_close_black_18dp"
                android:contentDescription="@string/add_to_cart_button"
                tools:ignore="ButtonStyle" />

            <Button
                android:paddingLeft="12dp"
                android:paddingStart="12dp"
                android:paddingRight="12dp"
                android:paddingEnd="12dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:minWidth="200dp"
                android:id="@+id/button2"
                android:background="@drawable/buttonrounded"
                android:text="@string/add_to_cart"
                android:drawableEnd="@drawable/ic_add_shopping_cart_black_18dp"
                android:contentDescription="@string/add_to_cart_button"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>